# ChangeLog for media-video/mplayer
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.652 2009/07/24 22:46:58 beandog Exp $

  24 Jul 2009; Steve Dibb <beandog@gentoo.org> mplayer-9999.ebuild:
  Drop support for old AMR libs

  04 Jul 2009; Brent Baude <ranger@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild:
  stable ppc64, bug 272646

  30 Jun 2009; Raúl Porcel <armin76@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild:
  ia64/sparc stable wrt #272646

  21 Jun 2009; Steve Dibb <beandog@gentoo.org>
  mplayer-1.0_rc2_p20090530.ebuild, mplayer-9999.ebuild:
  Fix osdmenu configuration, bug 274438

  08 Jun 2009; Jeroen Roovers <jer@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild:
  Stable for HPPA (bug #272646).

  07 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild:
  Stable on alpha, bug #272646

  07 Jun 2009; Markus Meier <maekke@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild:
  amd64/x86 stable, bug #272646

  06 Jun 2009; nixnut <nixnut@gentoo.org> mplayer-1.0_rc2_p20090322.ebuild:
  ppc stable #272646

  04 Jun 2009; Steve Dibb <beandog@gentoo.org> metadata.xml:
  Remove old realcodecs use flag

  04 Jun 2009; Steve Dibb <beandog@gentoo.org>
  mplayer-1.0_rc2_p28450.ebuild, mplayer-1.0_rc2_p20090226.ebuild,
  mplayer-1.0_rc2_p20090322.ebuild, mplayer-1.0_rc2_p20090530.ebuild,
  mplayer-9999.ebuild:
  Install input.conf and menu.conf in the correct location

  03 Jun 2009; Samuli Suominen <ssuominen@gentoo.org>
  mplayer-1.0_rc2_p20090322.ebuild, mplayer-1.0_rc2_p20090530.ebuild,
  -files/mplayer-1.0_rc2_p20090322-fix-mp3lib-use-local-labels.patch,
  +files/mplayer-1.0_rc2_p20090530-fix-mp3lib-use-local-labels-2.patch:
  Modify fix-mp3lib-use-local-labels to use jump 0b and 1b instead of 0 and
  1 wrt #271906, thanks to Luca Barbato. Remove the broken patch from old
  version.

  02 Jun 2009; Steve Dibb <beandog@gentoo.org> mplayer-9999.ebuild: