@@ -1,6 +1,11 @@
 # ChangeLog for media-video/mplayer
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.652 2009/07/24 22:46:58 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mplayer/ChangeLog,v 1.653 2009/07/26 10:48:35 ssuominen Exp $
+
+  26 Jul 2009; Samuli Suominen <ssuominen@gentoo.org>
+  mplayer-1.0_rc2_p20090530.ebuild, mplayer-9999.ebuild:
+  Remove USE musepack since ffmpeg offers internal codecs for SV7 and SV8
+  support.
 
   24 Jul 2009; Steve Dibb <beandog@gentoo.org> mplayer-9999.ebuild:
   Drop support for old AMR libs
